
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tablelayout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" > 
	            <TableRow 
				    android:layout_width="match_parent"				    
				    android:layout_height="0dp"
				    android:layout_weight="1">
				    	<EditText
				        android:id="@+id/edit_text_id"
				        android:layout_height="match_parent"
				        android:layout_width="match_parent"
				        android:layout_weight="1"				        
				        android:inputType="text"
				        android:background="@android:color/white"
				        android:paddingTop="50dp"
						android:gravity="right"
						android:textSize="40sp"
				         />
	   			</TableRow>
    
			    <TableRow
			    android:layout_width="fill_parent"
			    android:layout_weight="1"
			    android:layout_height="fill_parent">
			        <TextView
				        android:id="@+id/text_View_id"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:layout_width="match_parent"
				        android:background="@android:color/white"
					    android:textColor="@android:color/black"
					    android:gravity="right" 
					    android:textSize="20sp">
			        </TextView>
    			</TableRow>          
        </TableLayout>

        <TableLayout
            android:id="@+id/tablelayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@color/skyblue" > 
             <TableRow
		        android:layout_height="match_parent"
		    	android:layout_width="wrap_content"
		    	android:layout_weight="1" >
			    <Button
		            android:id="@+id/button_history"
		            android:layout_width="20dp"
		            android:layout_height="match_parent"
		            android:text="@string/btnhistory" 
		            android:layout_weight="1"
		            android:textColor="@android:color/white"
		            android:textSize="18sp"
		            android:background="@drawable/border2"/>
			    
			    <Button
				     android:id="@+id/button_mc"
				     android:layout_height="match_parent"
				     android:layout_width="wrap_content"
				     android:text="@string/btnmc" 
				     android:layout_weight="1"
				     android:textColor="@android:color/white"
			         android:textSize="20sp"
				     android:background="@drawable/border2"/>
			    
			     <Button
				     android:id="@+id/button_clear"
				     android:layout_height="match_parent"
				     android:layout_width="wrap_content"
				     android:text="@string/btnclr" 
				     android:layout_weight="1"
				     android:textColor="@android:color/white"
			         android:textSize="20sp"
				     android:background="@drawable/border2"/>                
			     			   			    
		        <Button
				     android:id="@+id/button_del"
				     android:layout_gravity="right"
				     android:layout_height="match_parent"
				     android:layout_width="wrap_content"
				     android:text="@string/btndel" 
				     android:layout_weight="1"
				     android:textColor="@android:color/white"
		             android:textSize="20sp"
				     android:background="@drawable/border2"/>      
			</TableRow>
			
            <TableRow
		        android:layout_height="match_parent"
		    	android:layout_width="wrap_content"
		    	android:layout_weight="1" >
			
            <Button
			     android:id="@+id/button_ms"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/btnms" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>			                  
	       
	        <Button
			     android:id="@+id/button_mplus"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/btnmplus" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        <Button
			     android:id="@+id/button_mr"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/btnmr" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        
	        <Button
			     android:id="@+id/button_mminus"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/btnmminus" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border2"/>
       		</TableRow>
       		
    		<TableRow
		        android:layout_height="match_parent"
		    	android:layout_width="wrap_content"
		    	android:layout_weight="1">
	        <Button
			     android:id="@+id/button_id7"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcSeven" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        <Button
			     android:id="@+id/button_id8"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcEight" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        <Button
			     android:id="@+id/button_id9"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcNine" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        <Button
			     android:id="@+id/button_iddiv"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcDiv" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border2"/>
	    </TableRow>
	    <TableRow
	        android:layout_height="match_parent"
	    	android:layout_width="wrap_content"
	    	android:layout_weight="1">
	        <Button
			     android:id="@+id/button_id4"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcFour" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        <Button
			     android:id="@+id/button_id5"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcFive" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        <Button
			     android:id="@+id/button_id6"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcSix" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        <Button
			     android:id="@+id/button_idmult"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcMult" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border2"/>  
	        </TableRow>
	        
	       <TableRow
	        android:layout_height="match_parent"
	    	android:layout_width="wrap_content"
	    	android:layout_weight="1">
	        <Button
			     android:id="@+id/button_id1"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcOne" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        <Button
			     android:id="@+id/button_id2"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcTwo" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        <Button
			     android:id="@+id/button_id3"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcThree" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>  
		     <Button
			     android:id="@+id/button_idminus"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcMinus" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border2"/>
	        </TableRow>
	        
	       <TableRow
	        android:layout_height="match_parent"
	    	android:layout_width="wrap_content"
	    	android:layout_weight="1">
	        <Button
			     android:id="@+id/button_iddot"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcDot" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        <Button
			     android:id="@+id/button_id0"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcZero" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        <Button
			     android:id="@+id/button_ide"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcEqual" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
		         android:textSize="20sp"
			     android:background="@drawable/border"/>
	        <Button
			     android:id="@+id/button_idplus"
			     android:layout_height="match_parent"
			     android:layout_width="wrap_content"
			     android:text="@string/calcPlus" 
			     android:layout_weight="1"
			     android:textColor="@android:color/white"
			     android:textSize="20sp"
			     android:background="@drawable/border2"/>  
	        </TableRow>   
	                      
     </TableLayout>

</LinearLayout>   
